fix: icon, hide sidebar scrollbar if not needed

--- a/sass/css/_navbar.scss
+++ b/sass/css/_navbar.scss
@@ -39,14 +39,6 @@
 			font-weight: 400;
 			color: $tintColor;
 
-			.icon {
-				mask-image: url(/images/aidoku.svg);
-				background-color: $tintColor;
-				width: 1.5rem;
-				height: 1.5rem;
-				mask-size: 1.5rem;
-			}
-
 			&.bold {
 				font-weight: 450;
 			}
